[workspace]

[package]
name = "fastfifo"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["into", "from"] }
fastfifoprocmacro = { path = "./fastfifoprocmacro" }
clap = { version = "4.5.41", features = ["derive"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
tracing-appender = "0.2"

[features]
cli = ["clap"]
default = ["cli"]

[[bin]]
name = "mpmc_perf"
required-features = ["cli"]

[[bin]]
name = "variadic_perf"
required-features = ["cli"]

[dev-dependencies]
