[workspace]

[package]
name = "fastfifo"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["into", "from"] }
fastfifoprocmacro = { path = "./fastfifoprocmacro" }
clap = { version = "4.5.41", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-log = { version = "0.2", optional = true }
tracing-appender = { version = "0.2", optional = true }

[features]
debug = ["tracing"]
cli = ["clap", "tracing", "tracing-subscriber", "tracing-log", "tracing-appender"]
default = []

[[bin]]
name = "mpmc_perf"
required-features = ["cli"]

[[bin]]
name = "variadic_perf"
required-features = ["cli"]

[[bin]]
name = "paella_1_buffer_dyn"
required-features = ["cli"]

[dev-dependencies]
rand = "0.9.2"

[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }